# showtimes

./: .flake8  .gitattributes  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
datasets/: model_non_simulated_next.shmodel  model_non_simulated_overall.shmodel  model_with_simulated_next.shmodel  model_with_simulated_overall.shmodel
migrations/: 20230130105144_init.py  20230130105150_init.py  20230806130104_fix_poster_path.py  20230806142347_correct_server_search_projects.py
pipelines/: multi-lint.py
showtimes/: __init__.py  _metadata.py  app.py  errors.py  formatter.py  tooling.py  typings.py  utils.py
showtimes/assets/css/: claim.css
showtimes/controllers/: __init__.py  anilist.py  claim.py  database.py  gqlapi.py  prediction.py  pubsub.py  ratelimiter.py  redisdb.py  searcher.py  security.py  showrss.py  storages.py  tmdb.py
showtimes/controllers/oauth2/: __init__.py  discord.py
showtimes/controllers/sessions/: __init__.py  backend.py  errors.py  handler.py
showtimes/extensions/: __init__.py
showtimes/extensions/fastapi/: __init__.py  discovery.py  errors.py  lock.py  responses.py
showtimes/extensions/graphql/: __init__.py  context.py  files.py  router.py  scalars.py
showtimes/extensions/markdown/: __init__.py  plaintext.py
showtimes/extensions/monkeypatch/: __init__.py  aiohttp.py
showtimes/graphql/: __init__.py  cursor.py  exceptions.py  resolvers.py  schema.py
showtimes/graphql/models/: __init__.py  collab.py  common.py  enums.py  fallback.py  notification.py  pagination.py  partials.py  projects.py  search.py  servers.py  showrss.py  users.py
showtimes/graphql/mutations/: __init__.py  common.py  projects.py  servers.py  users.py
showtimes/graphql/queries/: __init__.py  search.py  showtimes.py
showtimes/graphql/subscriptions/: __init__.py  notification.py  showrss.py  showtimes.py
showtimes/models/: __init__.py  _doc.py  abstract.py  anilist.py  database.py  integrations.py  notification.py  premium.py  pubsub.py  searchdb.py  session.py  showrss.py  timeseries.py  tmdb.py
showtimes/routes/: __init__.py  images.py  oauth2.py  server.py
showtimes/templates/: claim.html
stubs/: tantivy.pyi
