[tool.poetry]
name = "showtimes"
version = "0.1.0"
description = "A full-featured project management for foreign-media translation group"
authors = ["noaione <noaione0809@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
redis = {extras = ["hiredis"], version = "^4.4.2"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.151.3"}
motor = "3.1.1"
beanie = "1.17.0"
itsdangerous = "^2.1.2"
orjson = "^3.8.5"
websockets = "^10.4"
coloredlogs = "^15.0.1"
pendulum = "^2.1.2"
aiopath = "^0.6.11"
argon2-cffi = "^21.3.0"
psutil = "^5.9.4"
aiohttp = "^3.8.3"
tantivy-mirror = "^0.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^22.12.0"
uvicorn = "^0.20.0"
pep8-naming = "^0.13.3"
flake8-bugbear = "^22.12.6"
flake8-pyi = "^23.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["_dataset/**", "env/**", "venv/**", "./venv/**", ".pytest_cache/**", ".nox/**"]
line_length = 110
skip_gitignore = true

[tool.pyright]
include = ["showtimes", "pipelines", "routes", "app.py"]
exclude = ["venv", "env", "node_modules", ".venv", ".env", ".nox", ".pytest_cache", ".mypy_cache", ".tox", "build", "dist", "_build", "**/__pycache__"]
ignore = ["_testing"]
stubPath = "./stubs"

reportMissingImports = true
venv = "."

pythonVersion = "3.10"